# robot_ros_clean_description

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: controllers.yaml
launch/: controller.launch.py  display.launch.py  full_simulation.launch.py  gazebo.launch.py
meshes/: banh_xe_1.stl  banh_xe_2.stl  banh_xe_3.stl  banh_xe_4.stl  base_link.stl  dong_co_1.stl  dong_co_2.stl  dong_co_3.stl  dong_co_4.stl  motor-holder_1.stl  motor-holder_2.stl  motor-holder_3.stl  motor-holder_4.stl  ros_LiDar_1.stl  ros_base_arm_1.stl  ros_camera_1.stl  ros_link1_1.stl  ros_link2_1.stl
scripts/: arm_teleop.py
urdf/: materials.xacro  robot_ros_clean.gazebo  robot_ros_clean.xacro
